# petshop-back

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
petshop_api/database/: connection.py
petshop_api/models/: products.py
petshop_api/routes/: products.py
